tree-sitter-loongdoc_inline/test/corpus/anchor_macro.txt
====================
anchor_macro
====================

this is a [[idname]] or [[idname,Reference Text]] or anchor:idname[] or anchor:idname[Reference Text]

-----

(inline
  (id_assignment)
  (id_assignment)
  (inline_macro
    (target))
  (inline_macro
    (target)
    (attr)))
