tree-sitter-loongdoc_inline/test/corpus/emphasis.txt
====================
emphasis
====================

this is a *emphasis* or in this form**em\*phasis**.
this is a _ltalic_ or in this form__l\_talic__is ok.
this is a `ltalic` or in this form``lta\`lic``is ok.
this is a #ltalic# or in this form##lta\#lic##is ok.

this is a _`monospace` inside ltalic_ code.

-----

(inline
  (emphasis)
  (emphasis)
  (ltalic)
  (escaped_ch)
  (monospace)
  (monospace)
  (highlight)
  (highlight)
  (ltalic
    (monospace)))
