tree-sitter-loongdoc_inline/test/corpus/escaped.txt
====================
escaped
====================

this is a \*emphasis\* or in this form**em\*phasis**.
this is a \`ltalic\` or in this form``lta\`lic``is ok.
this is a \#ltalic\# or in this form\##lta\#lic\##is ok.

this is a \_`monospace` inside ltalic\_ code.

-----

(inline
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (emphasis))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (monospace))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element
    (monospace))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (escaped_sequence))
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element))
