tree-sitter-loongdoc_inline/test/corpus/footnote.txt
====================
footnote
====================

this is a footnote:[text] or footnote:id[text] or footnote:id[] or footnoteref:[id,text] or footnoteref:[id]

-----

(inline
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (footnote
      (attr)))
  (inline_element)
  (inline_element)
  (inline_element
    (footnote
      (target)
      (attr)))
  (inline_element)
  (inline_element)
  (inline_element
    (footnote
      (target)))
  (inline_element)
  (inline_element)
  (inline_element
    (footnote
      (attr)))
  (inline_element)
  (inline_element)
  (inline_element
    (footnote
      (attr))))
