tree-sitter-loongdoc_inline/test/corpus/image_macro.txt
====================
image_macro
====================

this is a image:filename.png[Alt Text] or image:http://example.com/images/filename.png[Alt Text] or image:filename.png[More [Alt\] Text] (alt text becomes "More [Alt] Text") or icon:github[large]

-----

(inline
  (inline_macro
    (target)
    (attr))
  (inline_macro
    (target)
    (attr))
  (inline_macro
    (target)
    (attr))
  (inline_macro
    (target)
    (attr)))
