tree-sitter-loongdoc_inline/test/corpus/link_macro.txt
=================
link_macro
=================

this is a link:vvv[] and mailto:bbb[ccc]

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (target)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (inline_macro
      (target)
      (attr))))
