tree-sitter-loongdoc_inline/test/corpus/math_macro.txt
=================
math_macro
=================

this is a stem:[x != 0] or asciimath:[x != 0] or latexmath:[\sqrt{4} = 2]

-----

(inline
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (stem_macro
      (attr)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (stem_macro
      (attr)))
  (inline_element
    (word))
  (inline_element
    (word))
  (inline_element
    (stem_macro
      (attr))))
