tree-sitter-loongdoc_inline/test/corpus/replacement.txt
===========
replacement
===========

this is a replacement {cpp}

{cpp\} 😀}

-----

(inline
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element)
  (inline_element
    (replacement
      (intrinsic_attributes)))
  (inline_element
    (replacement
      (intrinsic_attributes))))
